--- a/agency.css
+++ b/agency.css
@@ -926,10 +926,10 @@ section h2.section-subheading {
 }
 
 #playlist li.active {
-    background-color: #f2f2f2;
+    background: rgba(240,240,240,0.5);
 }
 #playlist li:hover {
-    background-color: #efefef;
+    background: rgba(200,200,200,0.5);
 }
 
 #playlist li a {
@@ -973,20 +973,23 @@ span.fa {
     margin-right: 10px;
 }
 
-.gallery-item {
+#music .gallery-item,
+#gallery .gallery-item {
     margin: 0 0 15px;
     right: 0;
 }
 
-.gallery-item .gallery-link {
+#music .gallery-item .gallery-link,
+#gallery .gallery-item .gallery-link {
     display: block;
     position: relative;
-    /*max-width: 400px;*/
+    max-width: 400px;
     margin: 0 auto;
 }
 
-.gallery-item .gallery-link .gallery-hover {
-    background: rgba(240, 240, 240, 0.75);
+#music .gallery-item .gallery-link .gallery-hover,
+#gallery .gallery-item .gallery-link .gallery-hover {
+    background: rgba(204, 204, 204, 0.75);
     position: absolute;
     width: 100%;
     height: 100%;
@@ -996,11 +999,13 @@ span.fa {
     -moz-transition: all ease 0.5s;
 }
 
-.gallery-item .gallery-link .gallery-hover:hover {
+#music .gallery-item .gallery-link .gallery-hover:hover,
+#gallery .gallery-item .gallery-link .gallery-hover:hover {
     opacity: 1;
 }
 
-.gallery-item .gallery-link .gallery-hover .gallery-hover-content {
+#music .gallery-item .gallery-link .gallery-hover .gallery-hover-content,
+#gallery .gallery-item .gallery-link .gallery-hover .gallery-hover-content {
     position: absolute;
     width: 100%;
     height: 20px;
@@ -1011,15 +1016,18 @@ span.fa {
     color: white;
 }
 
-.gallery-item .gallery-link .gallery-hover .gallery-hover-content i {
+#music .gallery-item .gallery-link .gallery-hover .gallery-hover-content i,
+#gallery .gallery-item .gallery-link .gallery-hover .gallery-hover-content i {
     margin-top: -12px;
 }
 
-.gallery-item .gallery-link .gallery-hover .gallery-hover-content h4 {
+#music .gallery-item .gallery-link .gallery-hover .gallery-hover-content h3,
+#gallery .gallery-item .gallery-link .gallery-hover .gallery-hover-content h4 {
     margin: 0;
 }
 
-.gallery-item .gallery-caption {
+#music .gallery-item .gallery-caption,
+#gallery .gallery-item .gallery-caption {
     max-width: 400px;
     margin: 0 auto;
     background-color: white;
@@ -1027,21 +1035,22 @@ span.fa {
     padding: 25px;
 }
 
-.gallery-item .gallery-caption h4 {
+#music .gallery-item .gallery-caption h4,
+#gallery .gallery-item .gallery-caption h4 {
     text-transform: none;
     margin: 0;
 }
 
-.gallery-item .gallery-caption p {
+#music .gallery-item .gallery-caption p,
+#gallery .gallery-item .gallery-caption p {
     font-family: "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-style: italic;
     font-size: 16px;
     margin: 0;
 }
 
-#music .gallery-item img,
-#gallery .gallery-item img,
-#team .gallery-item img {
+#music img,
+#gallery img {
     width: 100%;
 }
 
