--- a/css/agency.css
+++ b/css/agency.css
@@ -318,24 +318,24 @@ header {
 }
 
 header .hero {
-    background-image: url("../img/header-bg.jpg");
+    background-image: url("https://media-6af8.kxcdn.com/img/header-bg.jpg");
 }
 
 @media (min-width: 992px) {
     header .hero {
-        background-image: url("../img/header-bg.jpg");
+        background-image: url("https://media-6af8.kxcdn.com/img/header-bg.jpg");
     }
 }
 
 @media (max-width: 992px) {
     header .hero {
-        background-image: url("../img/header-bg-992w.jpg");
+        background-image: url("https://media-6af8.kxcdn.com/img/header-bg-992w.jpg");
     }
 }
 
 @media (max-width: 768px) {
     header .hero {
-        background-image: url("../img/header-bg-768w.jpg");
+        background-image: url("https://media-6af8.kxcdn.com/img/header-bg-768w.jpg");
     }
 }
 
@@ -517,7 +517,7 @@ section h2.section-subheading {
 
 @media (min-width: 768px) and (max-width: 992px) {
     #team .hero {
-        background-image: url("../img/team-bg-768w.jpg");
+        background-image: url("https://media-6af8.kxcdn.com/img/team-bg-768w.jpg");
         background-size: contain;
     }
 
@@ -528,7 +528,7 @@ section h2.section-subheading {
 
 @media (min-width: 992px) {
     #team .hero {
-        background-image: url("../img/team-bg.jpg");
+        background-image: url("https://media-6af8.kxcdn.com/img/team-bg.jpg");
     }
 }
 
@@ -832,19 +832,19 @@ section h2.section-subheading {
 }
 @media (max-width: 768px) {
     #music .hero {
-        background-image: url("../img/kidpic-bg-768w.jpg");
+        background-image: url("https://media-6af8.kxcdn.com/img/kidpic-bg-768w.jpg");
         background-size: contain;
     }
 }
 
 @media (min-width: 768px) {
     #music .hero {
-        background-image: url("../img/kidpic-bg-992w.jpg");
+        background-image: url("https://media-6af8.kxcdn.com/img/kidpic-bg-992w.jpg");
     }
 }
 @media (min-width: 1200px) {
     #music .hero {
-        background-image: url("../img/kidpic-bg.jpg");
+        background-image: url("https://media-6af8.kxcdn.com/img/kidpic-bg.jpg");
     }
 }
 
@@ -1060,6 +1060,9 @@ span.fa {
     width: 300px;
     margin: 0 auto;
 }
+img.fullwidth {
+    width: 100% !important;
+}
 
 #music *,
 #gallery * {
@@ -1080,7 +1083,7 @@ span.fa {
 }
 
 #school .hero {
-    background-image: url('../img/kidpic-bg.jpg');
+    background-image: url('https://media-6af8.kxcdn.com/img/kidpic-bg.jpg');
 }
 
 section#school h1.section-heading {
@@ -1160,7 +1163,7 @@ section#school h2.last {
 
 section#contact {
     background-color: #222222;
-    background-image: url('../img/contact-bg.jpg');
+    background-image: url('https://media-6af8.kxcdn.com/img/contact-bg.jpg');
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -1247,9 +1250,16 @@ footer {
     text-align: center;
 }
 
-footer span.copyright {
+footer p.copyright,
+footer p.credits {
     line-height: 40px;
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+footer p a {
+    color: steelblue;
+}
+footer p a:hover {
+    text-decoration: underline;
 }
 
 footer ul.quicklinks {
@@ -1257,7 +1267,12 @@ footer ul.quicklinks {
     line-height: 40px;
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-
+footer ul.quicklinks a {
+    color: steelblue;
+}
+footer ul.quicklinks a:hover {
+    text-decoration: underline;
+}
 ul.social-buttons {
     margin-bottom: 0;
 }
@@ -1434,6 +1449,21 @@ ul.social-buttons li a:active {
     margin-bottom: 0;
 }
 
+/* SECTION : legal terms */
+#legalTerms a {
+    color: steelblue;
+}
+#legalTerms a:hover {
+    text-decoration: underline;
+}
+#legalTerms .close-modal .lr,
+#legalTerms .close-modal .rl {
+    background-color: #333;
+}
+#legalTerms h2,
+#legalTerms p {
+    text-align: justify;
+}
 ::-moz-selection {
     text-shadow: none;
     background: #fdfdfd;
