--- a/css/agency.css
+++ b/css/agency.css
@@ -1270,7 +1270,7 @@ footer ul.quicklinks {
 footer ul.quicklinks a {
     color: steelblue;
 }
-footer ul.quicklinks a:hover {
+footer ul.quicklinks a:h {
     text-decoration: underline;
 }
 ul.social-buttons {
@@ -1464,6 +1464,41 @@ ul.social-buttons li a:active {
 #legalTerms p {
     text-align: justify;
 }
+
+/* Cookie consent */
+.cookie-consent {
+    display: none;
+    min-height: 50px;
+    padding: 4px 2px;
+    position: fixed;
+    left: 50%;
+    bottom: 0;
+    text-align: center;
+    bottom: 0;
+    width: 50%;
+    z-index: 999999;
+    background-color: #fff;;
+    border-top: 1px solid #aaa;
+}
+.cookie-consent > p {
+    font-size: smaller;
+    margin-bottom: 4px;
+}
+.cc-button-wrapper {
+    display: inline-block;
+    margin: 0 15px;
+    width: auto;
+}
+.cc-btn {
+    font-size: smaller;
+    padding: 2px 4px;
+}
+
+.cookie-consent-button {
+    display: inline-block;
+    cursor: pointer;
+}
+
 ::-moz-selection {
     text-shadow: none;
     background: #fdfdfd;
